--- a/R/REPORT_GENERATOR.Rmd
+++ b/R/REPORT_GENERATOR.Rmd
@@ -444,7 +444,7 @@ if(p_type=="log2FC"){
 ```
 
 ```{r}
-if(!test_type == "nostats"){
+if(test_type == "nostats"){
   cat("## Table of changed metabolites </span>\n")
 } else {
   cat("## Table of significantly changed metabolites </span>\n") 
@@ -458,7 +458,7 @@ if(!test_type == "nostats"){
 `r if(p_type=="adj.p.value"){"Table of significantly changed metabolites for overall effect of independent variable and for pairwise-contrasts filtered as described above (adjusted p-value < 0.05)."}`
 
 ```{r}
-if(!test_type == "nostats"){
+if(test_type == "nostats"){
   cat("To view results for a test of interest, click the arrow at the top of the contrast column to sort by contrast or use the search bar to search for a contrast. To see what metabolites were changed for more than one contrast, sort by metabolite and see how many contrasts were significant for each metabolite. (Tip: Reverse sorting by Metabolite will display known metabolites first.)\n") 
 } else {
   cat("To view results for a test of interest, click the arrow at the top of the contrast column to sort by contrast or use the search bar to search for a contrast. To see what metabolites were significantly changed for more than one test, sort by metabolite and see how many contrasts were significant for each metabolite. (Tip: Reverse sorting by Metabolite will display known metabolites first.)\n") 
@@ -479,7 +479,7 @@ datatable(Client_Data_Download[["report_results"]] %>% filter(abs(log2FC)>1.5) %
 ```
 
 ```{r}
-if(!test_type == "nostats"){
+if(test_type == "nostats"){
   cat("# Visualizations of changed metabolites</span>\n")
 } else {
   cat("# Visualizations of significantly changed metabolites</span>\n") 
@@ -489,7 +489,7 @@ if(!test_type == "nostats"){
 All plots below can be zoomed, selected, and downloaded individually (and/or as modified) using the toolbar on the top right of the figure (will appear when you hover your mouse). Hover over plot points to view underlying data.
 
 ```{r}
-if(!test_type == "nostats"){
+if(test_type == "nostats"){
   cat("## Barplots of >1.5 log2FC changes by metabolite class </span>\n")
 } else {
   cat("## Barplots of significant changes by metabolite class </span>\n") 
@@ -497,7 +497,7 @@ if(!test_type == "nostats"){
 ```
 
 ```{r}
-if(!test_type == "nostats"){
+if(test_type == "nostats"){
   cat("Hover over bars to view changed metabolites for each class. (If a contrast is missing, there were no >1.5 log2FC changed metabolites with KEGG IDs for that contrast) </span>\n")
 } else {
   cat("Hover over bars to view significantly changed metabolites for each class. (If a contrast is missing, there were no significantly changed metabolites with KEGG IDs for that contrast) </span>\n") 
@@ -544,12 +544,12 @@ bar.df<<-rbind(barplotvector,bar.df)
 colnames(bar.df) <- bar.df[1,]
 #Add colnames
 if(test_type=="nostats"){
-  colnames(bar.df) <- c("Class","Increase","Decreases","Increase_Text","Decrease_Text")
-  if(sum(as.numeric(bar.df$Increase)+as.numeric(bar.df$Decreases))>0){
+  colnames(bar.df) <- c("Class","Increases","Decreases","Increase_Text","Decrease_Text")
+  if(sum(as.numeric(bar.df$Increases)+as.numeric(bar.df$Decreases))>0){
 fig <- plot_ly()
 fig <- fig %>% add_bars(
     x = bar.df$Class,
-    y = as.numeric(bar.df$Decrease),
+    y = as.numeric(bar.df$Decreases),
     hovertemplate = bar.df$Decrease_Text,
     base = -as.numeric(bar.df$Decreases),
     marker = list(
@@ -559,7 +559,7 @@ fig <- fig %>% add_bars(
                             str_split(contrasts[[i]],pattern="-")[[1]][2]))
 fig <- fig %>% add_bars(
     x = bar.df$Class,
-    y = as.numeric(bar.df$Increase),
+    y = as.numeric(bar.df$Increases),
     base = 0,
     hovertemplate = bar.df$Increase_Text,
     marker = list(
@@ -576,17 +576,16 @@ fig <- fig %>% layout(title = paste(" >1.5 log2FC changes by metabolite class\n(
          yaxis = list(title = "",tick0=0, dtick=1,range = list(-max(data.frame(barplotminmax.vector)),max(data.frame(barplotminmax.vector)))),margin = list(l = 75, t = 150))
 fig %>% layout(title="TEST")
 barplotlist[[i]] = ggplotly(fig) 
-} else
-{
+} else{
 print("No metabolite classes with >1.5 log2FC changes")
 }
   }else{
-colnames(bar.df) <- c("Class","Significant_Increase","Significant_Decreases","Increase_Text","Decrease_Text")
-if(sum(as.numeric(bar.df$Significant_Increase)+as.numeric(bar.df$Significant_Decreases))>0){
+colnames(bar.df) <- c("Class","Significant_Increases","Significant_Decreases","Increase_Text","Decrease_Text")
+if(sum(as.numeric(bar.df$Significant_Increases)+as.numeric(bar.df$Significant_Decreases))>0){
 fig <- plot_ly()
 fig <- fig %>% add_bars(
     x = bar.df$Class,
-    y = as.numeric(bar.df$Significant_Decrease),
+    y = as.numeric(bar.df$Significant_Decreases),
     hovertemplate = bar.df$Decrease_Text,
     base = -as.numeric(bar.df$Significant_Decreases),
     marker = list(
@@ -596,7 +595,7 @@ fig <- fig %>% add_bars(
                             str_split(contrasts[[i]],pattern="-")[[1]][2]))
 fig <- fig %>% add_bars(
     x = bar.df$Class,
-    y = as.numeric(bar.df$Significant_Increase),
+    y = as.numeric(bar.df$Significant_Increases),
     base = 0,
     hovertemplate = bar.df$Increase_Text,
     marker = list(
@@ -623,7 +622,7 @@ htmltools::tagList(setNames(barplotlist, NULL))
 ```
 
 ```{r}
-if(!test_type == "nostats"){
+if(test_type == "nostats"){
 
 cat("## Plots of metabolites' fold-change and adjusted p-value for each contrast</span>\n")
 
@@ -668,7 +667,7 @@ cat("```\n")
 ```
 
 ```{r}
-if(!test_type == "nostats"){
+if(test_type == "nostats"){
   cat("## Per-contrast boxplot of any of the top changed metabolites across sample class</span>\n")
 } else {
   cat("## Per-contrast boxplot of any of the top significantly changed metabolites across sample class</span>\n") 
@@ -864,7 +863,7 @@ htmltools::tagList(boxplotlist)
 ```
 
 ```{r}
-if(!test_type == "nostats"){
+if(test_type == "nostats"){
   cat("## Heatmaps of metabolites with greatest log2FC difference in abundance</span>\n")
 } else {
   cat("## Heatmaps of metabolites with most significant difference in abundance</span>\n") 
@@ -953,7 +952,7 @@ htmltools::tagList(setNames(heatmaplist, NULL))
 KEGG analysis was performed with the R package FELLA (https://bmcbioinformatics.biomedcentral.com/articles/10.1186/s12859-018-2487-5). Starting from a list of metabolites of interest, FELLA applies a null diffusive process over a network-based representation of the KEGG database and derive a relevant sub-network. The result of this analysis is a list of affected pathways and a graphical sub-pathway representation. The input list of metabolites of interest is indicated by the plot title. 
 
 ```{r}
-if(!test_type == "nostats"){
+if(test_type == "nostats"){
   cat("The most changed (log2FC) compounds input into the KEGG subnetwork analysis are shown with red squares (see key) and are drawn in their KEGG subnetwork. Hover over nodes to view annotation and to see the confidence of our identification of a particular input KEGG compound.\n(If no subnetworks are visible below, there were no >1.5 log2FC changed metabolites with KEGG IDs.)\n")
 } else {
   cat("The significantly changed compounds input into the KEGG subnetwork analysis are shown with red squares (see key) and are drawn in their KEGG subnetwork. Hover over nodes to view annotation and to see the confidence of our identification of a particular input KEGG compound.\n (If no subnetworks are visible below, there were no significantly changed metabolites with KEGG IDs.)\n") 
